@@ -1,5 +1,10 @@
 2015-12-15  Francois Bissonnette  <fbissonn@gmail.com>
 
+	* genericBarcode.cs:
+	  
+
+2015-12-15  Francois Bissonnette  <fbissonn@gmail.com>
+
 	* EAN-8.cs:
 	* gtk-gui2\gui.stetic:
 	* gtk-gui2\generated.cs:
